--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for perl distribution Mojolicious-Plugin-OAuth2
 
+1.55 Not Released
+ - Made it possible to disable automatic redirect
+
 1.54 2018-08-30T12:48:19+0200
  - Add oauth2.get_token_p() helper
  - Compatible with Mojolicious 7.90 #53
