--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for perl distribution Mojolicious-Plugin-OAuth2
 
+2.01 Not Release
+ - Test suite is compatible with older versions of Mojolicious
+
 2.00 2021-10-27T19:36:44+0900
  - Removed $c->oauth2->get_token()
    https://github.com/marcusramberg/Mojolicious-Plugin-OAuth2/blob/07e214eb556093de8691b145116b60ab64a4a21a/t/delayed.t#L23-L28
