OpenID Connect require Mojo::JWT 0.09

--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@ Revision history for perl distribution Mojolicious-Plugin-OAuth2
 
 2.01 Not Release
  - Test suite is compatible with older versions of Mojolicious
+ - OpenID Connect require Mojo::JWT 0.09
 
 2.00 2021-10-27T19:36:44+0900
  - Removed $c->oauth2->get_token()
