--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for perl distribution Mojolicious-Plugin-OAuth2
 
+2.02 Not Released
+ - Add support for passing in custom "ua"
+ - Add support for "providers" key in plugin config
+
 2.01 2021-10-28T18:29:45+0900
  - Test suite is compatible with older versions of Mojolicious
  - OpenID Connect require Mojo::JWT 0.09
